syntax = "proto3";

package conversionPackage;

service TemperatureService {
  rpc CelsiusToFahrenheit (TemperatureRequest) returns (TemperatureResponse);
}

message TemperatureRequest {
  double celsius = 1;
}

message TemperatureResponse {
  double fahrenheit = 1;
}